# wrongcl

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PLAN.md  README.md  SECURITY.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
android/: .gitignore
android/app/: build.gradle.kts
helpers/tun-proxy-bridge/: go.mod  go.sum  main.go  main_test.go
helpers/wireguard-client-bridge/: Cargo.toml  config.go  go.mod  go.sum  main.go  socks.go  wireguard.go
helpers/wireguard-client-bridge/src/: main.rs
helpers/wireguard-client-bridge/src/socks/: protocol.rs  tcp.rs  udp.rs
helpers/wireguard-client-bridge/src/wireguard/: mod.rs
ios/: .gitignore
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_settings_store.dart  autostart_manager.dart  client_home_controller.dart  control_state.dart  dashboard_view.dart  desktop_shell_controller.dart  health_view.dart  home_widgets.dart  main.dart  main_view.dart  profile_store.dart  signal_widgets.dart  system_proxy_manager.dart  wrongcl_client.dart
lib/l10n/: app_ar.arb  app_en.arb  app_es.arb  app_fr.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_zh.dart  app_zh.arb
lib/subviews/: connections_view.dart  editor_view.dart  import_view.dart  logs_view.dart  mode_picker_view.dart  profiles_view.dart  proxies_view.dart  requests_view.dart  runtime_view.dart  settings_view.dart
lib/theme/: wrongcl_colors.dart
lib/widgets/: control_column.dart  entry_chip.dart  mode_strip.dart  subpage_scaffold.dart  traffic_chart.dart  traffic_stats.dart  window_title_bar.dart
linux/: CMakeLists.txt
linux/packaging/: us.irrit.wrongcl.desktop
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: adapter.rs  anytls.rs  client.rs  config.rs  dns.rs  endpoint.rs  error.rs  ffi.rs  fragment.rs  gdocsviewer.rs  grpc.rs  hysteria2.rs  kcp.rs  lib.rs  logs.rs  main.rs  manager.rs  meek.rs  naive.rs  protocol.rs  proxy.rs  quic.rs  quic_obfs.rs  reality.rs  router.rs  shadowsocks.rs  shadowtls.rs  snell.rs  source_app.rs  tls.rs  trojan.rs  tuic.rs  tun.rs  vision.rs  webtransport.rs  wireguard.rs  xhttp.rs
rust/src/adapter/tests/: mod.rs  security.rs  support.rs  transport_profiles.rs  web_core.rs
rust/src/client/: protocols.rs  remote.rs  udp.rs  websocket.rs
rust/src/client/tests/: cases.rs  helpers.rs  mod.rs
rust/src/endpoint/: summary.rs  validate.rs
rust/src/ffi/: tests.rs
rust/src/gdocsviewer/: util.rs
rust/src/hysteria2/: session.rs
rust/src/kcp/: mask.rs
rust/src/logs/: tests.rs
rust/src/naive/: padding.rs  tunnel.rs
rust/src/proxy/: registry.rs  relay.rs  request.rs  requests.rs  udp.rs
rust/src/proxy/registry/: tests.rs
rust/src/proxy/requests/: tests.rs
rust/src/proxy/tests/: cases.rs  helpers.rs  mod.rs
rust/src/reality/: session.rs
rust/src/tuic/: codec.rs  session.rs
rust/src/tun/: linux_runtime.rs  macos_runtime.rs  windows_runtime.rs
rust/src/wireguard/: bridge.rs  cache.rs  mod.rs
rust/src/wireguard_runtime/: config.rs  device.rs  engine.rs  interface.rs  mod.rs  port_pool.rs  runtime.rs  session.rs  tcp.rs  udp.rs
rust/tests/: anytls_integration.rs  experimental_integration.rs  gdocsviewer_integration.rs  grpc_integration.rs  hysteria2_integration.rs  kcp_integration.rs  meek_integration.rs  naive_integration.rs  quic_integration.rs  reality_integration.rs  shadowtls_integration.rs  tls_integration.rs  tuic_integration.rs  tun_integration.rs  vision_integration.rs  webtransport_integration.rs  wireguard_integration.rs  wrongsv_diagnostics_sync.rs  ws_tls_integration.rs  xhttp_integration.rs
scripts/: build-android-rust.sh  check-rustfmt-local.ps1  check-rustfmt-local.sh  ensure-wrongsv-sibling.sh  gen_tray_icon.py  package-android-release.sh  package-freebsd-headless.sh  package-headless-linux-release.sh  package-headless-macos-release.sh  package-headless-windows-release.ps1  package-ios-release.sh  package-linux-release.sh  package-macos-release.sh  package-windows-msix.ps1  package-windows-release.ps1  release-notes.sh  setup-windows-deps.ps1  smoke-macos-tun.sh  smoke-windows-tun.ps1  verify-android-host.sh  verify-freebsd-headless.sh  verify-ios-host.sh  verify-local.sh  verify-macos-host.sh  verify-shared-wrongsv.sh  verify-windows-host.ps1
test/: app_settings_store_test.dart  client_home_controller_test.dart  profile_store_test.dart  widget_test.dart
test/theme/: wrongcl_colors_test.dart
windows/: CMakeLists.txt
(+12 files in other folders)
