[package]
name = "wrongcl_native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
uuid = "1"

[[bin]]
name = "wrongcl-headless"
path = "src/main.rs"
