[package]
name = "wrongcl_native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
boringtun = { version = "0.7.1", default-features = false }
bytes = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dashmap = "6"
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hkdf = "0.12"
hmac = "0.12"
http = "1"
ipnet = "2"
kcp = "0.6"
prost = "0.14"
quinn = "0.11"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
smoltcp = { version = "0.12", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry", "std"] }
uuid = "1"
wtransport = "0.7"
webpki-roots = "0.26"
wrongsv = { path = "../../wrongsv" }
wrongsv-grpc = { path = "../../wrongsv/crates/grpc" }
wrongsv-net-types = { path = "../../wrongsv/crates/net-types" }
wrongsv-reality = { path = "../../wrongsv/crates/reality" }
wrongsv-shadowsocks = { path = "../../wrongsv/crates/shadowsocks" }
wrongsv-vless = { path = "../../wrongsv/crates/vless" }
wrongsv-vless-encoding = { path = "../../wrongsv/crates/vless-encoding" }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
rcgen = "0.13"
wrongsv-server = { path = "../../wrongsv/crates/server" }

[[bin]]
name = "wrongcl-headless"
path = "src/main.rs"
