[package]
name = "wireguard-client-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
boringtun = { version = "0.7.1", default-features = false }
bytes = "1"
ipnet = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smoltcp = { version = "0.12", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
